application/ceph/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx-internal-ceph
  namespace: ceph
  annotations:
    kubernetes.io/ingress.class: "nginx-internal"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: ceph.iisquare.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ceph-dashboard
          servicePort: 16789
---
apiVersion: v1
kind: Service
metadata:
  name: ceph-dashboard
  namespace: ceph
spec:
  type: ClusterIP
  ports:
  - port: 16789
    targetPort: 16789
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ceph-dashboard
  namespace: ceph
subsets:
- addresses:
  - ip: 192.168.2.80
  ports:
  - port: 16789
